After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 775603 - Cannot open uncompressed info pages
Cannot open uncompressed info pages
Status: RESOLVED FIXED
Product: yelp
Classification: Applications
Component: Info Pages
git master
Other FreeBSD
: Normal normal
: ---
Assigned To: Yelp maintainers
Yelp maintainers
Depends on:
Blocks:
 
 
Reported: 2016-12-04 17:33 UTC by Ting-Wei Lan
Modified: 2017-06-20 08:30 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
magic-decompressor: Fix handling of uncompressed info pages (1.09 KB, patch)
2016-12-04 17:50 UTC, Ting-Wei Lan
committed Details | Review

Description Ting-Wei Lan 2016-12-04 17:33:50 UTC
When I tried to open an uncompressed info page with command such as 'yelp info:libffi', yelp shows a blank page and runs with high CPU usage. It seems that this problem is caused by function yelp_magic_decompressor_convert in file libyelp/yelp-magic-decompressor.c, which never returns G_CONVERTER_FINISHED when input data are uncompressed. This causes yelp to wait indefinitely in function open_info_file in file libyelp/yelp-info-parser.c because the g_input_stream_read call never returns.
Comment 1 Ting-Wei Lan 2016-12-04 17:50:13 UTC
Created attachment 341359 [details] [review]
magic-decompressor: Fix handling of uncompressed info pages

When an uncompressed info page is specified, function
yelp_magic_decompressor_convert always returns G_CONVERTER_CONVERTED.
This causes file loading to never be completed because function
g_input_stream_read keeps waiting for new data until the converter
returns G_CONVERTER_FINISHED.
Comment 2 Ting-Wei Lan 2016-12-05 02:02:02 UTC
This problem is very likely to happen on FreeBSD because most packages install uncompressed info pages.

It is still not possible to open man pages with yelp on FreeBSD because bug 648854 is not resolved.
Comment 3 Ting-Wei Lan 2017-06-08 14:40:25 UTC
Ping ... The patch has stayed here for 6 months without being reviewed.
Comment 4 David King 2017-06-20 08:30:18 UTC
Review of attachment 341359 [details] [review]:

Thanks for the patch - I pushed it to master as commit 7d603db8dd0eeceae618cd580156fe7f550bc5ff.