magic-decompressor: Fix handling of uncompressed info pages

When an uncompressed info page is specified, function
yelp_magic_decompressor_convert always returns G_CONVERTER_CONVERTED.
This causes file loading to never be completed because function
g_input_stream_read keeps waiting for new data until the converter
returns G_CONVERTER_FINISHED.

https://bugzilla.gnome.org/show_bug.cgi?id=775603